--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           >
           <ul class="page-header__list">
             <li class="page-header__item">
-              <a href="./index.html" class="page-header__link">Студія</a>
+              <a href="./index.html" class="page-header__link page-header__link--current">Студія</a>
             </li>
             <li class="page-header__item">
               <a href="./portfolio.html" class="page-header__link">Портфоліо</a>
