adds preferences section

--- a/index.html
+++ b/index.html
@@ -66,55 +66,56 @@
 
       <!-- preferences-->
 
-      <section class="section">
-        <div class="container preferences-section">
-          <h2 class="section-title visually-hidden">Переваги студії</h2>
-          <ul class="preferences list">
-            <li class="preferences-item">
-              <div class="preferences-icons">
-                <svg class="icon-antenna">
+      <section class="preferences">
+        <div class="preferences__section">
+          <h2 class="preferences__title">Переваги студії</h2>
+          <ul class="preferences__list">
+            <li class="preferences__item">
+              <div class="preferences__icons">
+                <svg class="preferences__icon">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="title">Увага до деталей</h3>
-              <p class="text">
+              <h3 class="preferences__subtitle">Увага до деталей</h3>
+              <p class="preferences__text">
                 Ідейні міркування, а також початок повсякденної роботи щодо формування позиції.
               </p>
             </li>
-            <li class="preferences-item">
-              <div class="preferences-icons">
-                <svg class="icon-clock">
+            <li class="preferences__item">
+              <div class="preferences__icons">
+                <svg class="preferences__icon">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="title">Пунктуальність</h3>
-              <p class="text">
+              <h3 class="preferences__subtitle">Пунктуальність</h3>
+              <p class="preferences__text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li class="preferences-item">
-              <div class="preferences-icons">
-                <svg class="icon-diagram">
+            <li class="preferences__item">
+              <div class="preferences__icons">
+                <svg class="preferences__icon">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="title">Планування</h3>
-              <p class="text">Також консультація з широким активом значною мірою зумовлює.</p>
+              <h3 class="preferences__subtitle">Планування</h3>
+              <p class="preferences__text">Також консультація з широким активом значною мірою зумовлює.</p>
             </li>
-            <li class="preferences-item">
-              <div class="preferences-icons">
-                <svg class="icon-astronaut">
+            <li class="preferences__item">
+              <div class="preferences__icons">
+                <svg class="preferences__icon">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="title">Сучасні технології</h3>
-              <p class="text">
+              <h3 class="preferences__subtitle">Сучасні технології</h3>
+              <p class="preferences__text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
               </p>
             </li>
           </ul>
         </div>
       </section>
+
       <!-- activities -->
       <section class="section section-activities">
         <div class="container">
