adds activities section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </ul>
       </div>
     </header>
-       <main>
+    <main>
       <!-- hero -->
       <section class="hero-section">
         <div>
@@ -60,7 +60,9 @@
             Ефективні рішення для<br />
             вашого бізнесу
           </h1>
-          <button type="button" class="button  hero-section__button" data-modal-open>Замовити послугу</button>
+          <button type="button" class="button hero-section__button" data-modal-open>
+            Замовити послугу
+          </button>
         </div>
       </section>
 
@@ -99,7 +101,9 @@
                 </svg>
               </div>
               <h3 class="preferences__subtitle">Планування</h3>
-              <p class="preferences__text">Також консультація з широким активом значною мірою зумовлює.</p>
+              <p class="preferences__text">
+                Також консультація з широким активом значною мірою зумовлює.
+              </p>
             </li>
             <li class="preferences__item">
               <div class="preferences__icons">
@@ -117,28 +121,28 @@
       </section>
 
       <!-- activities -->
-      <section class="section section-activities">
-        <div class="container">
-          <h2 class="section-title">Чим ми займаємось</h2>
-          <ul class="activities list">
-            <li class="item">
+      <section class="activities">
+        <div class="activities__section">
+          <h2 class="activities__title">Чим ми займаємось</h2>
+          <ul class="activities__list">
+            <li class="activities__item">
               <a href="">
                 <img src="./images/typing.jpg" alt="Десктопні додатки" width="370" height="294" />
               </a>
 
-              <div class="activities-item">
-                <h3 class="activities-subtitle">Десктопні додатки</h3>
+              <div class="activities__text">
+                <h3 class="activities__subtitle">Десктопні додатки</h3>
               </div>
             </li>
-            <li class="item">
+            <li class="activities__item">
               <a href="">
                 <img src="./images/mobile.jpg" alt="Мобільні додатки" width="370" height="294" />
               </a>
-              <div class="activities-item">
-                <h3 class="activities-subtitle">Мобільні додатки</h3>
+              <div class="activities__text">
+                <h3 class="activities__subtitle">Мобільні додатки</h3>
               </div>
             </li>
-            <li class="item">
+            <li class="activities__item">
               <a href="">
                 <img
                   src="./images/colorpallete.jpg"
@@ -147,8 +151,8 @@
                   height="294"
                 />
               </a>
-              <div class="activities-item">
-                <h3 class="activities-subtitle">Дизайнерські рішення</h3>
+              <div class="activities__text">
+                <h3 class="activities__subtitle">Дизайнерські рішення</h3>
               </div>
             </li>
           </ul>
@@ -468,7 +472,7 @@
         </div>
       </section>
     </main>
-<!-- ----------------footer-------------- -->
+    <!-- ----------------footer-------------- -->
     <footer class="page-footer">
       <div class="page-footer__container">
         <div>
