adds team section

--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
         </div>
       </section>
       <!-- team -->
-      <section class="section team">
-        <div class="container section-team">
-          <h2 class="section-title">Наша команда</h2>
-          <ul class="team-set list">
+      <section class="team">
+        <div class="team__section">
+          <h2 class="team__title">Наша команда</h2>
+          <ul class="team__list">
             <li class="team-card">
               <a href="">
                 <img
@@ -173,9 +173,9 @@
                 />
               </a>
 
-              <div class="team-content">
-                <h3 class="title">Ігор Дем'яненко</h3>
-                <p lang="en" class="text">Product Designer</p>
+              <div class="team-card__content">
+                <h3 class="team-card__subtitle">Ігор Дем'яненко</h3>
+                <p lang="en" class="team-card__text">Product Designer</p>
                 <div class="social">
                   <ul class="social__list">
                     <li class="social__item">
@@ -237,9 +237,9 @@
                   height="260"
                 />
               </a>
-              <div class="team-content">
-                <h3 class="title">Ольга Репіна</h3>
-                <p lang="en" class="text">Frontend Developer</p>
+              <div class="team-card__content">
+                <h3 class="team-card__subtitle">Ольга Репіна</h3>
+                <p lang="en" class="team-card__text">Frontend Developer</p>
                 <div class="social">
                   <ul class="social__list">
                     <li class="social__item">
@@ -301,9 +301,9 @@
                   height="260"
                 />
               </a>
-              <div class="team-content">
-                <h3 class="title">Микола Тарасов</h3>
-                <p lang="en" class="text">Marketing</p>
+              <div class="team-card__content">
+                <h3 class="team-card__subtitle">Микола Тарасов</h3>
+                <p lang="en" class="team-card__text">Marketing</p>
                 <div class="social">
                   <ul class="social__list">
                     <li class="social__item">
@@ -365,9 +365,9 @@
                   height="260"
                 />
               </a>
-              <div class="team-content">
-                <h3 class="title">Михайло Єрмаков</h3>
-                <p lang="en" class="text">UI Designer</p>
+              <div class="team-card__content">
+                <h3 class="team-card__subtitle">Михайло Єрмаков</h3>
+                <p lang="en" class="team-card__text">UI Designer</p>
                 <div class="social">
                   <ul class="social__list">
                     <li class="social__item">
@@ -509,7 +509,7 @@
                   href="https://instagram.com"
                   target="_blank"
                   rel="noreferrer noopener nofollow"
-                  class="social__link"
+                  class="social__link social__link--white"
                 >
                   <svg class="social__icon">
                     <use href="./images/icons.svg#icon-instagram"></use></svg
@@ -520,7 +520,7 @@
                   href="https://twitter.com/"
                   target="_blank"
                   rel="noreferrer noopener nofollow"
-                  class="social__link"
+                  class="social__link social__link--white"
                 >
                   <svg class="social__icon">
                     <use href="./images/icons.svg#icon-twitter"></use></svg
@@ -531,7 +531,7 @@
                   href="https://uk-ua.facebook.com"
                   target="_blank"
                   rel="noreferrer noopener nofollow"
-                  class="social__link"
+                  class="social__link social__link--white"
                 >
                   <svg class="social__icon">
                     <use href="./images/icons.svg#icon-facebook"></use>
@@ -543,9 +543,9 @@
                   href="https://www.linkedin.com/"
                   target="_blank"
                   rel="noreferrer noopener nofollow"
-                  class="social__link"
+                  class="social__link social__link--white"
                 >
-                  <svg class="social__icon">
+                  <svg class="social__icon ">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
