--- a/index.html
+++ b/index.html
@@ -423,48 +423,49 @@
           </ul>
         </div>
       </section>
-      <section class="section clients">
-        <div class="container">
-          <h2 class="section-title">Постійні клієнти</h2>
-          <ul class="list clients-list">
-            <li class="item-client">
-              <a href="" class="client-thumb">
-                <svg width="106" height="60" class="client-icon">
+      <!-- section clients -->
+      <section class="clients">
+        <div class="clients__section">
+          <h2 class="clients__title">Постійні клієнти</h2>
+          <ul class="clients__list">
+            <li class="clients__item">
+              <a href="" class="clients__thumb">
+                <svg width="106" height="60" class="clients__icon">
                   <use href="./images/icons.svg#icon-Logo1"></use>
                 </svg>
               </a>
             </li>
-            <li class="item-client">
-              <a href="" class="client-thumb">
-                <svg width="106" height="60" class="client-icon">
+            <li class="clients__item">
+              <a href="" class="clients__thumb">
+                <svg width="106" height="60" class="clients__icon">
                   <use href="./images/icons.svg#icon-Logo2"></use>
                 </svg>
               </a>
             </li>
-            <li class="item-client">
-              <a href="" class="client-thumb">
-                <svg width="106" height="60" class="client-icon">
+            <li class="clients__item">
+              <a href="" class="clients__thumb">
+                <svg width="106" height="60" class="clients__icon">
                   <use href="./images/icons.svg#icon-Logo3"></use>
                 </svg>
               </a>
             </li>
-            <li class="item-client">
-              <a href="" class="client-thumb">
-                <svg width="106" height="60" class="client-icon">
+            <li class="clients__item">
+              <a href="" class="clients__thumb">
+                <svg width="106" height="60" class="clients__icon">
                   <use href="./images/icons.svg#icon-Logo4"></use>
                 </svg>
               </a>
             </li>
-            <li class="item-client">
-              <a href="" class="client-thumb">
-                <svg width="106" height="60" class="client-icon">
+            <li class="clients__item">
+              <a href="" class="clients__thumb">
+                <svg width="106" height="60" class="clients__icon">
                   <use href="./images/icons.svg#icon-Logo5"></use>
                 </svg>
               </a>
             </li>
-            <li class="item-client">
-              <a href="" class="client-thumb">
-                <svg width="106" height="60" class="client-icon">
+            <li class="clients__item">
+              <a href="" class="clients__thumb">
+                <svg width="106" height="60" class="clients__icon">
                   <use href="./images/icons.svg#icon-Logo6"></use></svg
               ></a>
             </li>
