portfolio basic murkup

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                   rel="noreferrer noopener nofollow"
                   class="social__link social__link--white"
                 >
-                  <svg class="social__icon ">
+                  <svg class="social__icon">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -579,5 +579,59 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <b class="modal-title">Залиште свої дані, ми вам передзвонимо</b>
+        <form class="main-form" autocomplete="off">
+          <label class="form-field">
+            <span class="form-label">Ім'я</span>
+            <input class="form-input" type="text" name="name" autofocus placeholder=" " />
+            <svg class="icon-form">
+              <use href="./images/icons.svg#icon-person-black"></use>
+            </svg>
+          </label>
+          <label class="form-field">
+            <span class="form-label">Телефон</span>
+            <input class="form-input" type="tel" name="tel" placeholder=" " />
+            <svg class="icon-form">
+              <use href="./images/icons.svg#icon-phone-black"></use>
+            </svg>
+          </label>
+          <label class="form-field">
+            <span class="form-label">Пошта</span>
+            <input class="form-input" type="email" name="mail" placeholder=" " />
+            <svg class="icon-form">
+              <use href="./images/icons.svg#icon-email-black"></use>
+            </svg>
+          </label>
+
+          <label class="form-textarea"
+            ><span class="form-label">Коментар</span>
+            <textarea
+              class="textarea-input"
+              name="comment"
+              id=""
+              placeholder="Введіть текст"
+            ></textarea>
+          </label>
+
+          <label class="contract-text">
+            Погоджуюся з розсилкою та приймаю
+            <a class="link contract-link" href="">Умови договору</a>
+
+            <input class="checkbox visually-hidden" type="checkbox" name="contract-policy" />
+            <span class="icon-check"></span>
+          </label>
+
+          <button class="btn primary" type="submit">Відправити</button>
+        </form>
+        <button type="button" class="modal-btn" data-modal-close>
+          <svg class="icon-close">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
