corrects modal button

--- a/index.html
+++ b/index.html
@@ -580,8 +580,8 @@
       </div>
     </footer>
 
-    <div class="backdrop backdrop--is-hidden" data-modal>
-      <div class="modal backdrop__modal--is-hidden">
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
         <b class="modal__title">Залиште свої дані, ми вам передзвонимо</b>
         <form class="form" autocomplete="off">
           <label class="form__field">
