--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
     <!-- ----------------footer-------------- -->
     <footer class="page-footer">
       <div class="page-footer__container">
-        <div>
+        <div class="page-footer__contacts">
           <a href="./index.html" lang="en" class="logo page-footer__logo"
             >Web<span class="logo--white">Studio</span></a
           >
@@ -586,14 +586,14 @@
         <form class="form" autocomplete="off">
           <label class="form__field">
             <span class="form__label">Ім'я</span>
-            <input class="form__input" type="text" name="name" autofocus placeholder=" " />
+            <input class="form__input" type="text" name="name" required autofocus placeholder=" " />
             <svg class="form__icon">
               <use href="./images/icons.svg#icon-person-black"></use>
             </svg>
           </label>
           <label class="form__field">
             <span class="form__label">Телефон</span>
-            <input class="form__input" type="tel" name="tel" placeholder=" " />
+            <input class="form__input" type="tel" name="tel" required placeholder=" " />
             <svg class="form__icon">
               <use href="./images/icons.svg#icon-phone-black"></use>
             </svg>
@@ -611,7 +611,6 @@
             <textarea
               class="form__textarea-input"
               name="comment"
-              id=""
               placeholder="Введіть текст"
             ></textarea>
           </label>
