--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-------------------- header -------------------->
     <header class="page-header">
       <div class="page-header__container">
-        <nav class="page-header_nav">
+        <nav class="page-header__nav">
           <a href="./index.html" lang="en" class="logo"
             >Web<span class="logo--black">Studio</span></a
           >
